--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
         </p></div>
 
     <br>
-      <div class="bg_pink">
-        <h2>Curriculum Vitae - Course of life</h2>
+<div class="bg_pink">
+        <div class="online_cv"><button class="pink_button">Download CV</button>
+          <h2>Curriculum Vitae - Course of life</h2>
         <h5>Opdateret, 20. maj 2022</h5><br>
     <h2>Erhvervserfaring</h2>
           <div class="row">
+
               <div class="column" style="background-color:#;">
                 <h3>Stilling</h3>
                 <p>Praktikant</p>
@@ -82,6 +84,7 @@
                 <p>Mediegrafiker elev</p>
                 <p>Mediegrafiker elev</p>
               </div>
+
               <div class="column" style="background-color:#;">
                 <h3>Virksomhed</h3>
                 <p>Comasys</p>
@@ -90,6 +93,7 @@
                 <p>red web</p>
                 <p>e-doktor/Aller</p>
               </div>
+
               <div class="column" style="background-color:#;">
             <h3>Postnr. og by</h3>
             <p>5220 Odense SØ</p>
@@ -98,6 +102,7 @@
             <p>5672 Odense SØ</p>
             <p>5672 Odense SØ</p>
             </div>
+
             <div class="column" style="background-color:#;">
               <h3>Periode</h3>
               <p>2020</p>
@@ -110,6 +115,7 @@
 
           <h2>Uddannelser</h2>
                 <div class="row">
+
                     <div class="column" style="background-color:#;">
                       <h3>Titel</h3>
                       <p>Multimediedesigner</p>
@@ -117,6 +123,7 @@
                       <p>Webintegrator</p>
                       <p>Pædagog</p>
                     </div>
+
                     <div class="column" style="background-color:#;">
                       <h3>Skole</h3>
                       <p>UCL</p>
@@ -124,6 +131,7 @@
                       <p>Odense Tekniske skole</p>
                       <p>Odense pædagog Seminarium</p>
                     </div>
+
                     <div class="column" style="background-color:#;">
                   <h3>Postnr. og by</h3>
                   <p>5000 Odense C</p>
@@ -131,6 +139,7 @@
                   <p>5230 Odense M</p>
                   <p>52000 Odense V</p>
                   </div>
+
                   <div class="column" style="background-color:#;">
                     <h3>Periode</h3>
                     <p>2022-2024</p>
@@ -138,8 +147,9 @@
                     <p>2006-2008</p>
                     <p>1998-2008</p>
                   </div>
-                </div>
+           </div>
       </div>
+    </div>
   </div>
 </div>
 <!-- Footer -->
