pink bg flyttes
Pink bg flyttes længere op på siden, så den også se på mobil, når CV ikke vises.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li>Har arbejdet som webdesigner og marketingassistent</li>
            </ul>
       </div>
-          <div class="intro_tekst_cv"><p><h2>Hvem er jeg?</h2>
+          <div class="bg_pink"><div class="intro_tekst_cv"><p><h2>Hvem er jeg?</h2>
           Jeg kan tilbyde jer en meget alsidig medarbejder, der har mange års erfaring med at lave hjemmesider,
           webshops, bannere, nyhedsmail og annoncer.<br>
           Gennem flere kurser i digital markedsføring bl.a. på IBC har jeg lært Facebook markedsføring samt SEO og Ad Words.
@@ -69,8 +69,8 @@
         </p></div>
 
     <br>
-<div class="bg_pink">
-        <div class="online_cv"><button class="pink_button">Download CV</button>
+<button class="pink_bt">Download CV</button>
+        <div class="online_cv">
           <h2>Curriculum Vitae - Course of life</h2>
         <h5>Opdateret, 20. maj 2022</h5><br>
     <h2>Erhvervserfaring</h2>
