Delt intro tekst op i 2 rækker
Lavet en flex container med 2 boxe til min intro tekst

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="#">Om mig</a>
     <a href="#">Projekter</a>
-    <a href="#">Galleri</a>
+    <a href="gallery.html">Galleri</a>
     <a href="#">Kontakt</a>
   </div>
 
@@ -27,7 +27,7 @@
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="side">
-        <div>
+        <div class="left-menu">
         <p>
         <ul>
           <h3>Undermenu</h3>
@@ -40,41 +40,49 @@
         </div>
   </div>
   <div class="main">
-    <h1>Om mig</h1>
-    <h5>Title description, Dec 7, 2017</h5>
-    <div class="img_profil"><img src="img/suz_profil.jpg" alt="Suz Profilbillede"></div>
-    <div class="list_profil">
-          <ul>
+
+
+<div class="flex-container-intro">
+    <div class="img_profile"><img src="img/suz_profil.jpg" alt="Suz Profilbillede"></div>
+    <div class="profile-list">
+          <ul><h1>Om mig</h1>
                <li>Under uddannelse som multimediedesigner</li>
                <li>10 års erhvervserfaring i it-branchen</li>
                <li>Uddannet mediegrafiker og webdesigner</li>
               <li>Professionel bruger af InDesign, Photoshop og Illustrator</li>
               <li>Har arbejdet som webdesigner og marketingassistent</li>
               <li>Kan kode i HTML5 og CSS</li>
-              <li>Professionel bruger af InDesign, Photoshop og Illustrator</li>
-              <li>Har arbejdet som webdesigner og marketingassistent</li>
-              <li>Har arbejdet som webdesigner og marketingassistent</li>
            </ul>
       </div>
-          <div class="bg_pink"><div class="intro_tekst_cv"><p><h2>Hvem er jeg?</h2>
-          Jeg kan tilbyde jer en meget alsidig medarbejder, der har mange års erfaring med at lave hjemmesider,
-          webshops, bannere, nyhedsmail og annoncer.<br>
-          Gennem flere kurser i digital markedsføring bl.a. på IBC har jeg lært Facebook markedsføring samt SEO og Ad Words.
-        <br><br>
+</div>
+    <div class="bg_pink">
+      <div class="flex-container-intro-cv">
+            <div class="intro-left"><h2>Hvem er jeg?</h2>
+                Jeg kan tilbyde jer en meget alsidig medarbejder, der har mange års erfaring med at lave hjemmesider,
+                webshops, bannere, nyhedsmail og annoncer.<br>
+                Gennem flere kurser i digital markedsføring bl.a. på IBC har jeg lært Facebook markedsføring samt SEO og Ad Words.
+                <br><br>
+            </div>
+            <div class="intro-right">
+                Jeg elsker at være kreativ, både med tekst og billeder, så det hele går op i en højere enhed.
+                Derudover er jeg en teamplayer, super lærenem og ikke bange for at tage fat på nye opgaver.<br><br>
 
-          Jeg elsker at være kreativ, både med tekst og billeder, så det hele går op i en højere enhed.
-          Derudover er jeg en teamplayer, super lærenem og ikke bange for at tage fat på nye opgaver.<br><br>
+                Som person er jeg selvstændig, ansvarsfuld, serviceminded og sætter stor ære i at levere et godt og flot resultat som rammer målgruppen.
 
-          Som person er jeg selvstændig, ansvarsfuld, serviceminded og sætter stor ære i at levere et godt og flot resultat som rammer målgruppen.
-        </p></div>
+            </div>
 
-    <br>
+  </div>
 <button class="pink_bt">Download CV</button>
+    
+
         <div class="online_cv">
           <h2>Curriculum Vitae - Course of life</h2>
         <h5>Opdateret, 20. maj 2022</h5><br>
-    <h2>Erhvervserfaring</h2>
           <div class="row">
+            <div class="column" style="background-color:#;">
+              <p><img src="img/suz_profil.jpg" alt="Suz Profilbillede"></p>
+
+            </div>
 
               <div class="column" style="background-color:#;">
                 <h3>Stilling</h3>
@@ -113,11 +121,14 @@
             </div>
           </div>
 
-          <h2>Uddannelser</h2>
+
                 <div class="row">
+                  <div class="column" style="background-color:#;">
+                    <p><img src="img/suz_profil.jpg" alt="Suz Profilbillede"></p>
+                  </div>
 
                     <div class="column" style="background-color:#;">
-                      <h3>Titel</h3>
+                      <h3>Uddannelse</h3>
                       <p>Multimediedesigner</p>
                       <p>Mediegrafiker</p>
                       <p>Webintegrator</p>
@@ -127,9 +138,9 @@
                     <div class="column" style="background-color:#;">
                       <h3>Skole</h3>
                       <p>UCL</p>
-                      <p>Odense Tekniske skole</p>
-                      <p>Odense Tekniske skole</p>
-                      <p>Odense pædagog Seminarium</p>
+                      <p>OTS</p>
+                      <p>OTS</p>
+                      <p>OSS</p>
                     </div>
 
                     <div class="column" style="background-color:#;">
